--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,24 @@
   <!-- BODY -->
   <body class="page-content">
     <header>
+      <!-- NAVIGATION -->
       <nav class="nav">
         <svg>
           <use href="/images/logo/icons.svg#icon-rozwijanka"></use>
         </svg>
         <h1 class="nav__title">Psia Rozwijanka</h1>
+        <div class="nav__contact">
+          <a href="tel:+48691301018" class="nav__contact--phone"
+            >+48 691 301 018</a
+          >
+          <a href="mailto: psiarozwijanka@gmail.com" class="nav__contact--mail"
+            >psiarozwijanka@gmail.com</a
+          >
+        </div>
       </nav>
     </header>
+    <main>
+      <div class="test"></div>
+    </main>
   </body>
 </html>
